<resources>
    <string name="app_name">Registro</string>
    <string name="your_name">¿Como te llamas?</string>
    <string name="your_lastname">¿Y tu apellido?</string>
    <string name="your_age">¿Cuantos años tienes?</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="view_conditions">Ver Condiciones</string>
    <string name="join">Me apunto</string>
    <string name="todo">Aún no está implementado</string>
    <string name="input_layput_name_error">Ups, no creo que sea correcto, revísalo</string>
    <string name="input_layout_age_error">Esta app no es para ti</string>
</resources>